<resources>
    <string name="app_name">mynotes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Notes Fragment</string>
    <string name="second_fragment_label">Editor Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="header_title">My Notes</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_notes_title">Title</string>
    <string name="txt_notes_content">Content</string>
    <string name="txt_notes_date">Date</string>

    <!--Undo Snackbar Strings-->
    <string name="message_note_deleted">Note deleted</string>
    <string name="message_undo_delete">Undo</string>
    
    <!--Filter texts-->
    <string name="txt_by_title">By title</string>
    <string name="txt_by_date">By date</string>
    <string name="txt_by_color">By color</string>
    <string name="editor_fragment_title_hint">Add your title</string>
    <string name="editor_fragment_content_hint">Add some content for your note</string>
    <string name="confirm_button_content_description">confirm</string>

</resources>
