<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">
    
    <TextView
        android:id="@+id/txt_header_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/header_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="My Notes" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_header_note">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/note_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/editor_fragment_title_hint"
                android:textColorHint="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/editor_fragment_content_hint"
                android:textColorHint="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/layoutBtnColors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_edit_text" />

            <LinearLayout
                android:id="@+id/layoutBtnColors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="13dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/purple_button"
                    style="@style/purple_color_button" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/orange_button"
                    style="@style/orange_color_button" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/blue_button"
                    style="@style/blue_color_button" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/green_button"
                    style="@style/green_color_button" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/yellow_button"
                    style="@style/yellow_color_button" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/confirm_button_content_description"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>